# Lab1

./: CMakeLists.txt  lab1.sln
lab1/: Main.cpp  MyFunctions.cpp  MyFunctions.h  lab1.vcxproj  lab1.vcxproj.filters
